@@ -135,6 +135,7 @@ There are multiple improvements to the documentation theme this release, here ar
  * Update latest version message on Dashboard to accept dev build version format used on nlightly builds (Sam Moran)
  * Ensure `ChooserBlock.extract_references` uses the model class, not the model string (Alex Tomkins)
  * Regression in field width for authentication pages (log in / password reset) (Chisom)
+ * Ensure the new minimap correctly pluralises error counts for `aria-label`s (Matt Westcott)
 
 ## Upgrade considerations
 
